# russignol

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
docs/: DEVICE_OPERATION.md  INSTALL_HOST_UTILITY.md  INSTALL_LXC.md  INSTALL_MANUAL.md  SECURITY_AUDIT.md
docs/security/: watermark-crash-analysis.md
host-utility/: CONFIGURATION.md  Cargo.toml  KEY_ROTATION.md  README.md
host-utility/src/: backup.rs  blockchain.rs  card_fs.rs  check.rs  cleanup.rs  config.rs  confirmation.rs  constants.rs  deps.rs  device_access.rs  disk.rs  display.rs  hardware.rs  image.rs  install.rs  keys.rs  main.rs  migrate_keys.rs  network.rs  phase0.rs  phase1.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  progress.rs  purge.rs  release_signature.rs  restore_keys.rs  rootfs.rs  rotate_keys.rs  status.rs  system.rs  upgrade.rs  utils.rs  version.rs  watermark.rs
libs/crypto/: Cargo.toml
libs/crypto/src/: lib.rs
libs/crypto/tests/: dev_profile_guard.rs
libs/epd-2in13-v4/: Cargo.toml  README.md
libs/epd-2in13-v4/docs/: Hardware_and_Documents.md  SSD1680_datasheet_notes.md
libs/epd-2in13-v4/examples/: main.rs
libs/epd-2in13-v4/src/: common.rs  device.rs  display.rs  display_driver.rs  error.rs  lib.rs  refresh_policy.rs  touch.rs  touch_driver.rs
libs/flash-manifest/: Cargo.toml
libs/flash-manifest/src/: lib.rs
libs/release-signature/: Cargo.toml
libs/release-signature/src/: lib.rs
libs/signer/: .gitignore  Cargo.toml  DEVELOPMENT.md  PROTOCOL_SPECIFICATION.md  QUICKREF.md  README.md  USAGE.md
libs/signer/benches/: signing_benchmark.rs
libs/signer/examples/: tcp_client_test.rs  tcp_server_demo.rs  test_reduction.rs  unknown_key_driver.rs  watermark_e2e_test.rs
libs/signer/src/: base58check.rs  bls.rs  high_watermark.rs  lib.rs  magic_bytes.rs  main.rs  protocol.rs  server.rs  server_no_blocking.rs  signer.rs  signing_activity.rs  test_utils.rs  wallet.rs
libs/signer/tests/: crash_lock_poison.rs  dos_memory_exhaustion.rs  proptest_protocol.rs  race_watermark.rs  tcp_integration_test.rs
libs/storage/: Cargo.toml
libs/storage/src/: lib.rs  watermark.rs
libs/ui/: Cargo.toml
libs/ui/src/: fonts.rs  lib.rs  widgets.rs
libs/ui/src/pages/: error.rs  mod.rs  pin.rs  progress.rs
rpi-signer/: Cargo.toml  README.md  build.rs
rpi-signer/buildroot-external/: Config.in  external.desc  external.mk
rpi-signer/buildroot-external/board/russignol/: custom_cmdline.txt  custom_cmdline_hardened.txt  custom_config.txt  genimage-raspberrypizero2w.cfg  kernel.fragment  linux-russignol_defconfig  post-build.sh  post-image.sh  users.txt  users_hardened.txt
rpi-signer/buildroot-external/configs/: russignol_defconfig  russignol_hardened_defconfig
rpi-signer/buildroot-external/package/busybox/: busybox.config  busybox_hardened.config
rpi-signer/buildroot-external/patches/linux/: linux.hash
rpi-signer/buildroot-external/rootfs-overlay-common/etc/: mdev.conf  russignol_copyright
rpi-signer/buildroot-external/rootfs-overlay-dev/etc/: fstab  inittab
rpi-signer/buildroot-external/rootfs-overlay-dev/etc/init.d/: S10mdev  S20russignol  S30usb-ethernet
rpi-signer/buildroot-external/rootfs-overlay-hardened/: init
rpi-signer/src/: app.rs  banner.rs  chain_info.rs  constants.rs  events.rs  fonts.rs  image_info.rs  log_writer.rs  main.rs  network_status.rs  pages.rs  rootfs_check.rs  secret.rs  setup.rs  signer_server.rs  storage.rs  tap_counter.rs  text.rs  tezos_encrypt.rs  tezos_signer.rs  util.rs  watermark_setup.rs  widgets.rs
rpi-signer/src/pages/: about.rs  blockchain.rs  confirmation.rs  dialog.rs  greeting.rs  image_info.rs  notice.rs  pin.rs  screensaver.rs  signatures.rs  status.rs
website/: README.md  index.html  style.css
xtask/: Cargo.toml  README.md
xtask/src/: build.rs  changelog.rs  clean.rs  config.rs  deploy.rs  device.rs  image.rs  main.rs  maintainer_key.rs  upgrade.rs  utils.rs  watermark_test.rs
