[package]
name = "russignol-setup"
version = "0.13.7"
edition = "2024"
authors = ["Richard Ayotte"]
description = "Automated setup and validation utility for the russignol hardware signer host"
license = "MIT"

[lints]
workspace = true

[[bin]]
name = "russignol"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4"
colored = "3.1.1"
dirs = "6.0"
env_logger = "0.11.8"
indicatif = "0.18.3"
inquire = "0.9"
log = "0.4.29"
nix = { version = "0.31.1", features = ["user", "process"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1"
thiserror = "2.0.18"
ureq = "3.1"
semver = "1.0"
sha2 = "0.10"
tempfile = "3.24"
lzma-rs = "0.3"
unicode-width = "0.2"

[dev-dependencies]
