[package]
name = "xtask"
version = "0.1.1"
edition = "2024"
publish = false

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[lib]
name = "xtask_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "color"] }
colored = "3.1"
which = "8.0"
sha2 = "0.11"
regex = "1"
chrono = "0.4.45"
hex = "0.4.3"
russignol-storage = { version = "0.1.0", path = "../libs/storage" }
russignol-crypto = { version = "0.1.2", path = "../libs/crypto" }
russignol-release-signature = { version = "0.1.0", path = "../libs/release-signature" }
zeroize = "1.9"
rpassword = "7.5.4"
dirs = "6"

[dev-dependencies]
tempfile = "3.27.0"
