[package]
name = "russignol-crypto"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
description = "Shared encryption utilities for Russignol (scrypt + AES-256-GCM)"

[lints]
workspace = true

[dependencies]
scrypt = "0.12"
aes-gcm = "0.10"
log = { workspace = true }
zeroize = "1.8"

[dev-dependencies]
toml = "1.1.2"
